@@ -16,7 +16,7 @@ GCP_PRIVATE_KEY  = "<private-key>"
 
 
 # 🔑 Bloxlink API (https://blox.link)
-BLOXLINK_API_KEY = "<api-key>"
+BLOXLINK_SERVER_KEY_977254354589462618 = "<api-key>"
 
 
 # 🔑 Chewey Bot API (https://api.chewey-bot.top)
